<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_oferta"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/oferta"/>

    <item
        android:id="@+id/menu_novidades"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/novidades"/>

    <item
        android:id="@+id/menu_lojas"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lojas"/>

    <item
        android:id="@+id/menu_contato"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/contato"/>
        
    <item
        android:id="@+id/menu_sair"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sair"/>

</menu>