<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

  	<ScrollView
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content">

  	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
  	        
		    <TextView
		        android:textSize="20sp"
		   		android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
		        android:text="@string/nome_empresa"/>
		
		   <TextView
		       	android:textSize="15sp"
		       	android:layout_marginTop="20dp"
		   		android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
		        android:text="@string/introducao"/>
		
		   	<ImageView 
		        android:id="@+id/imagem_home"
		        android:background="@drawable/home"
		        android:layout_marginTop="40dp"
		        android:layout_marginLeft="10dp"
		        android:contentDescription="@string/imagem_llustrativa"
		        android:layout_width="261dp"
		    	android:layout_height="152dp"/>
		
		    <Button
		        android:layout_marginTop="30dp"
		        android:layout_marginLeft="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nossos_sabores"
		        android:onClick="sabores"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>